# TrabalhoFinal_Alex

./: CMakeLists.txt  READEME.md  main.c
Funcionalidades/: funcionalidades.h  modelRecord.h
Funcionalidades/A1/: BuscaRegistro.c
Funcionalidades/A2/: listarLocalidades.c
Funcionalidades/B1/: ListarRegistros.c  ListarRegistros.h
Funcionalidades/B2/: FiltrarRegistros.c
Funcionalidades/E1/: NovoRegistro.c
Funcionalidades/E2/: GerarRelatorio.c
Funcionalidades/M1/: SomaDominio.c  SomaDominio.h
Funcionalidades/M2/: ExportarRegistros.c
Funcionalidades/M3/: MediaLocalidade.c
include/: funcionalidades.h
src/A1/: BuscaRegistro.c  BuscaRegistro.h
src/A2/: listarLocalidades.c  listarLocalidades.h
src/B1/: ListarRegistros.c
src/B2/: FiltrarRegistros.c  FiltrarRegistros.h
src/E1/: NovoRegistro.c  NovoRegistro.h
src/E2/: GerarRelatorio.c  GerarRelatorio.h
src/M1/: SomaDominio.c
src/M2/: ExportarRegistros.c  ExportarRegistros.h
src/M3/: MediaLocalidade.c  MediaLocalidade.h
